--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Flask==3.1.0
-gunicorn==23.0.0
-agno==0.1.0
-groq==0.11.0
-markdown2==2.5.1
-python-dotenv==1.0.1
-Pillow==10.4.0
-Flask-SQLAlchemy==3.1.1
-Flask-Login==0.6.3
-Flask-WTF==1.2.2
-WTForms==3.2.1
-email-validator==2.2.0
-pandas==2.2.3
-plotly==5.24.1
-python-multipart==0.0.20
+Flask
+gunicorn
+agno
+groq
+markdown2
+python-dotenv
+Pillow
+Flask-SQLAlchemy
+Flask-Login
+Flask-WTF
+WTForms
+email-validator
+pandas
+plotly
+python-multipart
